# Zephyrous

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  learning.md  vcpkg.json
doc/: Install.md
include/Component/BlockComponent/: BlockDifficulty.h  BlockKind.h  BlockMovement.h  BlockPosition.h
include/Component/ChunkComponent/: ChunkConfig.h  ChunkPos.h
include/Component/ComComponent/: ComCollision.h  ComStata.h
include/Component/PlayerComponent/: PlayMovement.h  Player.h  PlayerAcceleration.h  PlayerChunk.h  PlayerFront.h  PlayerPosition.h  PlayerSpeed.h  PlayerStata.h  PlayerState.h  PlayerVisitor.h
include/Component/Tool/: Debug.h
include/Component/ViewComponent/: ViewConfig.h
include/Component/WindowComponent/: WindowConfig.h  WindowConfigBuilder.h  WindowFactory.h  WindowRuntime.h  WindowVisitor.h
include/System/: ChunkSystem.h  CollisionDetectionSystem.h  DispatcherSystem.h  MoveSystem.h  PhysicsSystem.h  PlayerSystem.h  PlayerVisitorSystem.h  RenderSystem.h  System.h  ViewSystem.h  WindowManageSystem.h  WindowSystem.h  WindowVisitorSystem.h
src/: Main.cpp
src/data/: windowconfig.json
src/include/Component/BlockComponent/: BlockDifficulty.h  BlockKind.h  BlockMovement.h  BlockPosition.h  BlockSquare.h  BlockVolume.h  Position.h
src/include/Component/ChunkComponent/: ChunkConfig.h  ChunkIsdirty.h  ChunkIsload.h
src/include/Component/PersonComponent/: Stata.h
src/include/Component/PlayerComponent/: PlayerStata.h
src/include/Component/Tool/: Debug.h
src/include/Component/ViewComponent/: ViewConfig.h  ViewMove.h  ViewRuntime.h  ViewSize.h
src/include/Component/WindowComponent/: WindowConfig.h  WindowFactory.h  WindowRuntime.h  WindowVisitor.h
src/include/Factory/: SquareFactory.h
src/include/System/: ChunkSystem.h  CreateSystem.h  MoveSystem.h  RenderSystem.h  System.h  ViewSystem.h  WindowSystem.h
src/jsoncpy/: mapconfig.json  viewconfig.json  windowconfig.json
